# csize

./: ChangeLog  INSTALL  Makefile.in  README.md  acsite.m4  ansi2knr.1  configure  configure.in  csize.c  csize.h  csize.man  csize.man.txt  patchlevel.h  scan.h  scan.l
t-dir/: CMP-COUNTS.sh  Makefile  README  TEST-COUNT.ok  TEST-COUNT.sh  TEST-OUT.ok  TEST-OUT.sh  t00-hello.c  t02-one-tok.c  t03-one-ln.c  t04-two-ln.c  t05-three-ln.c  t06-three-ln.c  t07-comments.c  t08-misc.c  t09-type.c  t10-two-fn.c  t11-pp-dir.c  t12-quier.c  t13-strings.c  t14-bslash.c  t15-westberg.c  v-comment.c  v-csize.c  v-pp-dir.c  z01-bad-char.c  z02-bad-char.c  z03-no-nl.c  z07-str-nl.c  z08-str-nl.c  z09-str-eof.c  zzz-version.c
